# bestsell

./: LICENSE  README.md  bestsell  docker-compose.yml
.github/workflows/: ci.yml  codeql-analysis.yml
backend/: .env.dev  .gitignore  Dockerfile  Makefile  pyproject.toml  setup.cfg
backend/alembic/: env.py
backend/alembic/versions/: 35d6acdeaddd_add_mercari_categories.py  8fc92f542cae_add_ecommerces.py
backend/app/: main.py
backend/app/api/: decorators.py  deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoint/: categories.py  ecommerces.py  products.py
backend/app/constant/: common.py  mercari.py
backend/app/core/: config.py
backend/app/db/: seed.py  session.py
backend/app/db/master/: ecommerce.yml
backend/app/model/: ecommerce.py  mercari_category.py  product.py
backend/app/schema/: __init__.py  category.py  ecommerce.py  product.py
backend/app/service/crud/: __init__.py  base.py  ecommerce.py  mercari_category.py
backend/app/service/scrape/: category.py  mercari.py
backend/app/util/: string_util.py
backend/tests/: test_version.py
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/components/: Searchbox.tsx  theme.ts
frontend/hooks/: ecommerce.ts  mercariCategory.ts  product.ts
frontend/pages/: _app.tsx  _document.tsx  index.tsx  mercari.tsx
frontend/types/: category.d.ts  ecommerce.d.ts  product.d.ts
middleware/nginx/: nginx.conf
middleware/nginx/services.d/: backend.conf  frontend.conf
